Normalize endpoints language
